--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Apollo</title>
 </head>
 <body>
-    
+    <div class="page">
+        <div class="container left">
+            <h1>Apollo™</h1>
+            <h1>Exploring new frontiers one at a time</h1>
+            <p>@2023</p>
+        </div>
+        <div class="container right"></div>
+    </div>
 </body>
 </html>
