--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <div class="background"></div>>
     <div class="page">
         <div class="container left">
             <h1>Apollo™</h1>
@@ -19,7 +20,7 @@
                 <label for="username">Name<input type="text" id="username" placeholder="Name" required></label>
                 <label for="email">Email<input type="email" id="email" placeholder="Email" required></label>
                 <label for="password">Password<input type="password" id="password" placeholder="Password" required></label>
-                <label for="password-confirm">Confirm Password<input type="password" id="password-confirm" placeholder="Confirm Password" required></label>
+                <label for="password-confirm"><input type="password" id="password-confirm" placeholder="Confirm Password" required></label>
                 <input type="checkbox" id="check"><label for="checkbox">By checking the checkbox below you agree to the <a href=".">terms and conditions<a></label>
                 <button id="signup-button" type="submit">Sign up</button> 
             </form>
