--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
         <div class="container right">
             <h1>Create Account</h1>
             <form>
-                <label for="username">Name<input type="text" id="username" placeholder="Name" required></label>
-                <label for="email">Email<input type="email" id="email" placeholder="Email" required></label>
-                <label for="password">Password<input type="password" id="password" placeholder="Password" required></label>
-                <label for="password-confirm"><input type="password" id="password-confirm" placeholder="Confirm Password" required></label>
+                <label for="username">Name</label><input type="text" id="username" placeholder="Name" required>
+                <label for="email">Email</label><input type="email" id="email" placeholder="Email" required>
+                <label for="password">Password</label><input type="password" id="password" placeholder="Password" required>
+                <label for="password-confirm"></label><input type="password" id="password-confirm" placeholder="Confirm Password" required>
                 <input type="checkbox" id="check"><label for="checkbox">By checking the checkbox below you agree to the <a href=".">terms and conditions<a></label>
                 <button id="signup-button" type="submit">Sign up</button> 
-            </form>
                 <p>Already had an account? <a href=".">Log in here</a>.</p>
+            </form>
+                
         </div>
     </div>
 </body>
