--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <label for="email">Email</label><input type="email" id="email" placeholder="Email" required>
                 <label for="password">Password</label><input type="password" id="password" placeholder="Password" required>
                 <label for="password-confirm"></label><input type="password" id="password-confirm" placeholder="Confirm Password" required>
-                <input type="checkbox" id="check"><label for="checkbox">By checking the checkbox below you agree to the <a href=".">terms and conditions<a></label>
+                <input type="checkbox" id="check"><label for="checkbox">By checking the checkbox below you agree to the <a href=".">terms and conditions</a></label>
                 <button id="signup-button" type="submit">Sign up</button> 
-                <p>Already had an account? <a href=".">Log in here</a>.</p>
+                <p>Already had an account? <a href=".">Log in here</a>. </p>
             </form>
                 
         </div>
